Fix not being able to select radio buttons with the arrow keys.

Restores the OnFocus > SetChecked line in RadioButton removed in
https://chromium-review.googlesource.com/c/547075, which is required
to let the user move the radio selection with the arrow keys.

Bug: 749014
Change-Id: I861f64b3abbcaac2ec762c7014e5b5e6bee8965b
Reviewed-on: https://chromium-review.googlesource.com/595231
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491132}
Former-commit-id: 9b173f861a75fa70a39515bcca7d323684d1cfe0